2003-07-09  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* dns.tcl: Added decoding for SOA response records. 

2003-05-09  Andreas Kupries  <andreask@activestate.com>

	* resolv.tcl (::resolv::init): Added missing [expr] bracing.

2003-05-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.4 ========================
	* 

2003-04-14  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* dns.tcl: Added error message to the timeout.
	* resolv.tcl: incorporated some of Emmanuel's updated code.

2003-04-12  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* dns.man: *Renamed* to tcllib_dns.man to avoid a name clash with
	the dns manpage from the scotty package.

2003-04-11  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* dns.tcl: Try to read the whole reply when using tcp. Added a 
	catch to avoid bgerrors within the handler.
	* dns.tcl:
	* dns.man:
	* pkgIndex.tcl: hiked version to 1.0.4
	
2003-04-11  Andreas Kupries  <andreask@pliers.activestate.com>

	* dns.tcl:
	* dns.man:
	* pkgIndex.tcl:  Fixed bug #614591. Set version of the package to
	  to 1.0.3 throughout. Added package 'resolv' to index.

2003-03-04  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* dns.tcl: converted from the log package to logger. Enable UDP as
	the default if available.

2003-02-27  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* resolv.tcl: Imported Emmanuel Frecon's code from the Tclers
	Wiki. Provides a name cache and simplifies usage of the dns
	package.
	
2003-02-25  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* dns.tcl: Tested the UDP transmission using a fixed TclUDP.
	* dns.tcl: Implemented inverse queries. (Pretty useless though).
	* dns.tcl: Added errorcode procedure.
	
2003-01-30  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* dns.tcl: Implemented UDP transmission. Currently not tested
	because tcludp doesn't handle binary data.

2003-01-24  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* pkgIndex.tcl: